--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -13,8 +12,6 @@
       rel="stylesheet"
     />
     <meta name="theme-color" content="#0f172a" />
-
-    
 
     <style>
       :root {
@@ -38,7 +35,7 @@
       body {
         height: 100%;
         margin: 0;
-        font-family: "Inter", system-ui, sans-serif;
+        font-family: "Poppins", sans-serif;
         background: linear-gradient(180deg, var(--bg1), var(--bg2));
         color: var(--text);
         display: flex;
@@ -160,9 +157,40 @@
 
       .h1 {
         font-weight: 700;
-        font-family: "Poppins";
-        font-size: 18px;
+        font-family: "Poppins", sans-serif;
+        font-size: 20px; /* a bit smaller for mobile */
+
+        background: linear-gradient(
+          270deg,
+          #ff3cac,
+          #ffffff,
+          #00f5a0,
+          #ffffff,
+          #f0f0f0
+        );
+        background-size: 1000% 1000%;
+
+        /* Compatibility */
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        color: transparent;
+
+        animation: rainbowFlow 15s ease infinite; /* slower */
       }
+
+      @keyframes rainbowFlow {
+        0% {
+          background-position: 0% 50%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+      }
+
       .h2 {
         font-size: 12px;
         color: var(--muted);
