--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         height: 450px;
         background: radial-gradient(
           circle,
-          rgba(255, 255, 255, 0.45),
+          rgb(187, 0, 0),
           rgba(255, 255, 255, 0)
         );
         border-radius: 50%;
@@ -84,16 +84,17 @@
 
       .card {
         position: relative;
-        width: 380px;
+        width: 500px; /* Increased size */
         max-width: calc(100% - 40px);
-        border-radius: 28px;
-        padding: 24px;
+        border-radius: 32px; /* Slightly more rounded */
+        padding: 32px; /* Extra padding */
         background: #243d77;
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.35),
-          inset 0 0 40px rgba(255, 255, 255, 0.2);
+        box-shadow: 0 25px 50px rgba(0, 0, 0, 0.45),
+          inset 0 0 50px rgba(255, 255, 255, 0.25);
         overflow: hidden;
         z-index: 10;
         transition: transform 0.25s ease, box-shadow 0.25s ease;
+        transform: scale(1.05); /* Slightly enlarged */
       }
 
       .card:hover {
@@ -194,10 +195,10 @@
 
       button.key {
         border: none;
-        padding: 16px;
-        border-radius: 16px;
+        padding: 20px;
+        border-radius: 50px;
         font-weight: 600;
-        font-size: 17px;
+        font-size: 20px;
         cursor: pointer;
         background: rgba(255, 255, 255, 0.14);
         border: 1.4px solid rgba(255, 255, 255, 0.23);
