--- a/index.html
+++ b/index.html
@@ -84,17 +84,16 @@
 
       .card {
         position: relative;
-        width: 500px; /* Increased size */
-        max-width: calc(100% - 40px);
-        border-radius: 32px; /* Slightly more rounded */
-        padding: 32px; /* Extra padding */
+        width: 100%;
+        max-width: 420px;
+        border-radius: 28px;
+        padding: 26px;
         background: #243d77;
-        box-shadow: 0 25px 50px rgba(0, 0, 0, 0.45),
-          inset 0 0 50px rgba(255, 255, 255, 0.25);
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.45),
+          inset 0 0 40px rgba(255, 255, 255, 0.25);
         overflow: hidden;
         z-index: 10;
         transition: transform 0.25s ease, box-shadow 0.25s ease;
-        transform: scale(1.05); /* Slightly enlarged */
       }
 
       .card:hover {
@@ -161,19 +160,17 @@
 
       .display {
         width: 100%;
-        height: 86px;
-        border-radius: 12px;
-        padding: 10px 16px;
+        height: 110px;
+        border-radius: 18px;
+        padding: 14px 20px;
         background: linear-gradient(180deg, var(--glass), var(--glass-2));
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-end;
-        gap: 6px;
-        margin-bottom: 16px;
+        gap: 8px;
+        margin-bottom: 22px;
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.02);
-        transition: transform 0.25s cubic-bezier(0.2, 0.9, 0.3, 1);
-        will-change: transform;
       }
 
       .small {
@@ -190,21 +187,21 @@
       .pad {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        gap: 10px;
+        gap: 14px;
       }
 
       button.key {
         border: none;
-        padding: 20px;
-        border-radius: 50px;
+        padding: 18px;
+        border-radius: 16px;
         font-weight: 600;
-        font-size: 20px;
+        font-size: 18px;
         cursor: pointer;
         background: rgba(255, 255, 255, 0.14);
         border: 1.4px solid rgba(255, 255, 255, 0.23);
         color: var(--text);
-        backdrop-filter: blur(20px) saturate(200%);
-        -webkit-backdrop-filter: blur(20px) saturate(200%);
+        backdrop-filter: blur(18px) saturate(200%);
+        -webkit-backdrop-filter: blur(18px) saturate(200%);
         box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4),
           inset 0 0 25px rgba(255, 255, 255, 0.25);
         transition: all 0.18s ease;
@@ -238,7 +235,9 @@
         grid-column: span 2;
         background: linear-gradient(90deg, #06b6d4, #7c3aed);
         color: white;
-        font-size: 18px;
+        font-size: 20px;
+        padding: 18px;
+        border-radius: 16px;
       }
 
       #aboutBtn {
@@ -377,6 +376,27 @@
       [bio-link]:hover {
         background: rgba(255, 255, 255, 0.15);
         border-color: rgba(255, 255, 255, 0.3);
+      }
+
+      @media (max-width: 480px) {
+        .card {
+          padding: 22px;
+          max-width: 380px;
+        }
+
+        button.key {
+          padding: 16px;
+          font-size: 16px;
+        }
+
+        .display {
+          height: 100px;
+          padding: 12px 18px;
+        }
+
+        .big {
+          font-size: 26px;
+        }
       }
     </style>
   </head>
